# OPNpool

./: .gitignore  .gitmodules  .travis.yml  DESIGN_DEV_AND_DEBUG  FULL_INSTALL.md  LICENSE.spdx  README.md  opnpool-1.yaml  package.json  sdkconfig.defaults  secrets.REDACTED
.github/: FUNDING.yml
android/: build.gradle
design/: 0. Introduction.html  1. RS-485 bus.html  2. Hardware.html  3. Tools.html  (+7 more)
factory/main/: CMakeLists.txt  Kconfig  Kconfig.example  main.c  main.c-org
interface/main/: CMakeLists.txt  Kconfig  Kconfig-example  Kconfig.example  board_name.c  display_task.c  display_task.h  encode.h  hass_str.c  hass_task.c  hass_task.h  http_post_server.c  http_post_server.h  httpd.c  httpd.h  httpd_api.c  httpd_cb.c  httpd_json.h  httpd_root.c  httpd_root.h  https_client_task.c  https_client_task.h  ipc.c  ipc.h  ipc_msgs.h  main.c  main.cpp  mqtt_task.c  mqtt_task.h  name.c  packetizer_task.c  pentair.h  pool_state.c  pool_state.h  pool_task.c  pool_task.h  poolstate.c  poolstate.h  pooltypes.h  receiver.h  (+6 more)
interface/main/datalink/: datalink.c  datalink.h  datalink_pkt.h  datalink_rx.c  datalink_str.c  datalink_tx.c  packetizer_task.c  packetizer_task.h  rs485.c  rs485.h
interface/main/hass/: hass.c  hass.h  hass_str.c
interface/main/httpd/: httpd.c  httpd.h  httpd_api.c  httpd_api.h  httpd_ico.c  httpd_json.c  httpd_root.c  httpd_who.c
interface/main/ipc/: ipc.c  ipc.h
interface/main/mqtt/: mqtt_task.c  mqtt_task.h
interface/main/network/: name.c  name.h  network.c  network.h  network_create.c  network_hdr.h  network_msg.h  network_msgs.h  network_rx.c  network_str.c  network_tx.c  receive_msg.c  transmit_msg.c
interface/main/poolstate/: cpool.c  cpool.h  msg.h  name.c  poolstate.c  poolstate.h  poolstate_get.c  poolstate_json.c  poolstate_rx.c  poolstate_str.c  receive_update.c  to_json.c  to_json.h
interface/main/presentation/: decode.c  decode.h  encode.c  encode.h  name.c  name.h  presentation.c  presentation.h
interface/main/proto/: name.c  name.h  pentair.h
interface/main/rs485/: rs485.c  rs485.h
interface/main/skb/: skb.c  skb.h
interface/main/state/: poolstate.c  poolstate.h  to_json.c  to_json.h
interface/main/tx_buf/: tx_buf.c  tx_buf.h
interface/main/utils/: board_name.c  board_name.h  strl.c  utils.h  utils_str.c  utils_str.h
(+491 files in other folders)
